✨ Feat: 교환 완료 내역 조회 Page 반환 형식으로 통일